# llvm-pass-tutorial

./: CMakeLists.txt  README.md
Armariris/: CMakeLists.txt  CryptoUtils.cpp  Enter.cpp  Flattening.cpp  StringObfuscation.cpp  Substitution.cpp
Armariris/include/Transforms/Obfuscation/: Flattening.h  Substitution.h
Armariris/include/llvm/Transforms/Obfuscation/: Flattening.h  Substitution.h
Hikari/: AntiClassDump.cpp  BogusControlFlow.cpp  CMakeLists.txt  CryptoUtils.cpp  Enter.cpp  Flattening.cpp  FunctionCallObfuscate.cpp  FunctionWrapper.cpp  IndirectBranch.cpp  Obfuscation.cpp  SplitBasicBlocks.cpp  StringEncryption.cpp  Substitution.cpp
Hikari/include/llvm/Transforms/Obfuscation/: Obfuscation.h
ollvm/: BogusControlFlow.cpp  CMakeLists.txt  CryptoUtils.cpp  Enter.cpp  Flattening.cpp  SplitBasicBlocks.cpp  Substitution.cpp  Utils.cpp
ollvm/include/Transforms/Obfuscation/: BogusControlFlow.h  Flattening.h  Split.h  Substitution.h
test/: test.c
